--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -144,7 +144,7 @@
             }
             li{
                 display: inline-block;
-                background: url(./../../images/cross.png) no-repeat scroll right center;
+                background: url(./../images/cross.png) no-repeat scroll right center;
                 padding: 0 10px 0 4px;
                 margin-bottom: 0;
                 font-size: 13px;
