--- a/src/assets/scss/blog.scss
+++ b/src/assets/scss/blog.scss
@@ -1,16 +1,8 @@
-// banner
-
-
-
-
-
-// banner
-
 // blog listing
 
 
 .blog-header {
-    background-image: url('./../../images/blog-banner.png');
+    background-image: url('./../images/blog-banner.png');
     color: #fff;
     padding-top: 110px;
     padding-bottom: 110px;
@@ -32,9 +24,8 @@
 
 .blog-list {
     .card {
-        // margin: 30px auto;
         margin-top: 30px;
-        // margin-left: -20px;
+        // padding-bottom: 0px;
     }
     .card-image {
         img {
@@ -46,6 +37,7 @@
 
     .section-desc {
         padding: 30px;
+        padding-bottom: 15px;
 
         .card-title {
             font-style: normal;
@@ -64,12 +56,14 @@
         }
 
         .card-description {
-            padding-left: 0px;
             p {
+                padding: 0px;
+                padding-bottom: 30px;
                 font-style: normal;
                 font-size: 16px;
                 font-weight: 400;
                 color: #637381;
+                // color: red;
                 line-height: 25px;
                 margin-bottom: 0px;
                 font-family: 'Graphik-Regular';
@@ -84,6 +78,10 @@
 
     .blog-section-footer {
         padding: 15px 30px;
+        margin-left: -30px;
+        margin-right: -30px;
+        // padding-top: 15px;
+        padding-bottom: 0px;
         border-top: 1px solid rgba(0, 0, 0, .1222);
         display: block;
         overflow: hidden;
@@ -92,6 +90,15 @@
             @media only screen and (max-width: 575px) {
                 font-size: 14px;
                 line-height: 1.2;
+            }
+            body {
+                margin: 0;
+                font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 1.5;
+                color: #212529;
+                text-align: left;
             }
 
             a {
@@ -105,13 +112,16 @@
                     font-size: 14px;
                     line-height: 1.2;
                 }
+                &:hover {
+                    text-decoration: none;
+                }
             }
         }
 
         .read-more-link {
             text-align: right;
             font-family: 'Times New Roman', Times, serif;
-            color: red;
+            // color: red;
             @media only screen and (max-width: 575px) {
                 text-align: left;
                 margin-top: 10px;
@@ -123,14 +133,14 @@
                 font-size: 15px;
                 font-weight: 600;
                 line-height: 27px;
-                font-family: 'Lato', sans-serif;
+                font-family: 'PT Serif', serif;
 
                 @media only screen and (max-width: 575px) {
                     font-size: 14px;
                     line-height: 1.2;
                 }
 
-                :hover {
+                &:hover {
                     // opacity: .75;
                     text-decoration: none;
                 }
@@ -219,13 +229,6 @@
 
 // blog sidebar
 
-
-
-.read-more-link {
-    text-align: right;
-    font-family: 'Times New Roman', Times, serif;
-    color: red;
-}
 
 // .container {
 //     width: 100%;
