--- a/src/assets/scss/partnership.scss
+++ b/src/assets/scss/partnership.scss
@@ -9,7 +9,7 @@
     }
 }
 .page-header {
-    background-image: url('./../../images/blog-banner.png');
+    background-image: url('./../images/blog-banner.png');
     background-repeat: no-repeat;
     margin-top: 0px;
     background-size: 100% 100%;
