--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -8,3 +8,6 @@
 @import './terms.scss';
 @import './testimonials.scss';
 @import './home.scss';
+@import './page-header.scss';
+@import './technology.scss';
+@import './technology-detail.scss';
