--- a/src/assets/scss/testimonials.scss
+++ b/src/assets/scss/testimonials.scss
@@ -1,79 +1,3 @@
-// banner
-
-.page-header{
-    margin: 0px;
-    padding: 50px 0px;
-    margin-top: 53px;
-    @media screen and (max-width: 575px){
-        padding: 30px 0;
-    }
-}
-.page-header {
-    background-image: url('./../images/blog-banner.png');
-    background-repeat: no-repeat;
-    margin-top: 0px;
-    background-size: 100% 100%;
-    @media(max-width: 767px){
-        background: linear-gradient(-14deg, #009fff 21%, #0974d5 30%, #053ab1 46%, #06284e 92%);
-    }
-    img { 
-        display: block;
-        margin: 0 auto;
-        height: 320px;
-        @media only screen and (max-width: 576px) {
-            height: 250px;
-        }
-    }
-    h5 {
-        font-size: 25px;
-        font-weight: 600;
-        color: #fff;
-        line-height: 30px;
-        margin-top: 42px;
-        margin-bottom: 10px;
-        font-family: 'Montserrat', sans-serif;
-        @media screen and (max-width: 575px){
-            margin-top: 20px;
-        }
-    }
-    .title {
-        font-family: 'Open Sans', sans-serif;
-        color: #ffffff;
-        font-weight: 700;
-        font-style: normal;
-        font-size: 42px;
-        line-height: 60px;
-        position: relative;
-        margin-bottom: 20px;
-        margin-top: 0px;
-        padding-bottom: 10px;
-        &:after {
-            width: 73px;
-            background: #33a2de;
-            height: 5px;
-            content: "";
-            position: absolute;
-            left: 4px;
-            bottom: 0;
-        }
-        @media(max-width: 767px){
-            font-size: 38px;
-        }
-    }
-    .sub-title {
-        font-family: 'Roboto', sans-serif;
-        color: #fff;
-        font-weight: normal;
-        font-style: normal;
-        font-size: 17px;
-        line-height: 25px;
-        margin-top: 8px;
-    }
-}
-
-//banner
-
-
 
 // testimonials
 
@@ -120,7 +44,10 @@
 }
 
 .testimonial-list {
-    margin: 30px -35px 50px -35px;
+    margin: 30px -15px 50px -15px;
+    .speaks {
+        padding: 20px;
+    }
 }
 
 p{
