--- a/src/assets/scss/privacy.scss
+++ b/src/assets/scss/privacy.scss
@@ -86,6 +86,7 @@
         color: #6e6e6e;
         font-size: 17px;
         line-height: 28px;
+        padding: 0px;
     }
     h5 {
         font-size: 1.25rem;
