--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,6 @@
+body {
+    overflow: hidden;
+}
 @import './blog.scss';
 @import './career.scss';
 @import './footer.scss';
@@ -11,3 +14,8 @@
 @import './page-header.scss';
 @import './technology.scss';
 @import './technology-detail.scss';
+@import './blogpost.scss';
+@import './contact.scss';
+@import './culture.scss';
+@import './aboutus.scss';
+@import './../../../node_modules/@fortawesome/fontawesome-free/css/all.css';
