--- a/src/assets/scss/testimonials.scss
+++ b/src/assets/scss/testimonials.scss
@@ -7,7 +7,7 @@
         // margin-bottom: 50px;
         margin-top: 100px;
         .testimonial-wrapper{
-            margin-bottom: 0;
+            margin-bottom: 20;
             // padding: 20px;
             .speaks{
                 width: 100%;
@@ -34,6 +34,7 @@
                 h3{
                     margin: 0;
                     font-size: 1rem;
+                    
                     @media(max-width: 767px){
                         font-size: 1.3rem;
                     }
@@ -67,10 +68,12 @@ p{
 h3{
     margin: 0;
     font-size: 1.4em;
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    line-height: 1.5em;
     @media(max-width: 767px){
         font-size: 1.3rem;
     }
-    font-weight: normal;
 }
 
 // testimonials
