--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -204,6 +204,78 @@
     @media screen and (max-width: 768px){
         padding: 40px 0;
     }
+    // .tab-content {
+    //     .active {
+    //         opacity: 1;
+    //     }
+    // }
+    .nav-tabs {
+        
+        .nav-link{
+            color: #000000;
+            padding: 0px;
+            margin-bottom: -15px;
+            p {
+                padding: 0px 10px;
+            }
+            img {
+                margin-bottom: 5px;
+                margin-right: 10px;
+            }
+            &.active {
+                color: #000000;
+                border: none;
+                background-color: transparent;
+                border-color:transparent;
+                .item-1 {
+                    border-bottom: 4px solid #00d8ff;
+                }
+        
+                .item-2 {
+                    border-bottom: 4px solid #dd1b16;
+                }
+        
+                .item-3 {
+                    border-bottom: 4px solid #4fb52c;
+                }
+        
+                .item-4 {
+                    border-bottom: 4px solid #f46f25;
+                }
+        
+                .item-5 {
+                    border-bottom: 4px solid #0071e1;
+                }
+        
+                .item-6 {
+                    border-bottom: 4px solid #fb503b;
+                }
+            }
+            &:hover {
+                background-color: transparent;
+                border-color:transparent;
+            }
+            .tab-pane {
+                .title {
+                    // margin: 20px 0px;
+                    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+                    color: #393b3c;
+                    font-weight: 600;
+                    font-size: 36px;
+                    line-height: 50px;
+                }
+                p {
+                    margin-top: 0px;
+                    font-family: 'Open Sans', sans-serif;
+                    font-size: 17px;
+                    line-height: 28px;
+                    margin-bottom: 10px;
+                    font-weight: 400;
+                    color: #313c49;
+                }
+            }
+        }
+    }
     .nav-pills {
         padding: 0px;
         display: inline-flex;
@@ -330,6 +402,23 @@
         border: 2px solid #0e7aff;
         color: #0e7aff;
         padding: 14px 30px;
+        &:hover {
+            background: transparent;
+            border: 2px solid #0e7aff;
+            // color: #0e7aff;
+        }
+    }
+    .title {
+        margin-top: 20px;
+    }
+    p {
+        padding: 0px 20px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 17px;
+        line-height: 28px;
+        margin-bottom: 10px;
+        font-weight: 400;
+        color: #313c49;
     }
     .tab-content {
         .tab-pane {
@@ -337,9 +426,9 @@
                 color: #313c49;
                 font-weight: bold;
                 font-style: normal;
-                font-size: 30px;
+                font-size: 36px;
                 line-height: 50px;
-                margin: 30px 0px;
+                margin: 20px 0px;
                 text-transform: capitalize;
                 font-family: 'Open Sans', sans-serif;
                 @media screen and (max-width: 575px){
@@ -349,11 +438,12 @@
             }
 
             p {
-                color: #7b7b7b;
+                color: #313c49;
+                padding: 0px;
                 font-family: 'Montserrat', sans-serif;
                 font-weight: normal;
                 font-style: normal;
-                font-size: 15px;
+                font-size: 17px;
                 line-height: 25px;
                 margin-bottom: 10px;
                 @media only screen and (max-width: 576px) {
