--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -204,23 +204,19 @@
     @media screen and (max-width: 768px){
         padding: 40px 0;
     }
-    // .tab-content {
-    //     .active {
-    //         opacity: 1;
-    //     }
-    // }
     .nav-tabs {
-        
         .nav-link{
             color: #000000;
             padding: 0px;
-            margin-bottom: -15px;
+            // margin: 0px 3px;
             p {
-                padding: 0px 10px;
+                padding: 8px 12px;
+                margin: 0px;
             }
             img {
                 margin-bottom: 5px;
                 margin-right: 10px;
+                width: 20px;
             }
             &.active {
                 color: #000000;
@@ -228,7 +224,9 @@
                 background-color: transparent;
                 border-color:transparent;
                 .item-1 {
+                    display: inline-block;
                     border-bottom: 4px solid #00d8ff;
+                    margin-bottom: 0px;
                 }
         
                 .item-2 {
@@ -257,7 +255,6 @@
             }
             .tab-pane {
                 .title {
-                    // margin: 20px 0px;
                     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
                     color: #393b3c;
                     font-weight: 600;
