--- a/src/assets/scss/blog.scss
+++ b/src/assets/scss/blog.scss
@@ -250,3 +250,60 @@
 //     margin-left: 0px;
 //     margin-right: 0px;
 // }
+
+
+.page-numbers {
+    color: green;
+    padding: 10px 20px;
+    font-size: 17px;
+    font-family: 'Roboto';
+    font-weight: 400;
+    margin: 10px 5px;
+    border-radius: 3px;
+    background-color: transparent;
+    border-radius: 5px;
+    // border: 1px solid black
+}
+
+
+.post-pagination {
+    padding-top: 50px;
+    margin-bottom: 1rem;
+    list-style-type: none;
+    .page-num {
+        list-style: none;
+        text-align: center;
+        li {
+            display: inline-flex;
+            button {
+                background-color: transparent;
+            }
+            .btn-default {
+                background-color: #fff;
+                // border-top: none;
+                // border: 1px solid gray;
+            }
+            .page-numbers {
+                padding: 10px 20px;
+                color: #009fff;
+                font-size: 17px;
+                font-family: 'Roboto';
+                font-weight: 400;
+                margin: 10px 5px;
+                border-radius: 3px;
+                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
+                &:hover {
+                    text-decoration: none;
+                    color: #0056b3;
+                }
+            }
+            .current {
+                background: linear-gradient(-45deg, #9fcb29 0%, #5bb53f 100%);
+                color: #fff;
+                &:hover {
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
