--- a/src/assets/scss/blogpost.scss
+++ b/src/assets/scss/blogpost.scss
@@ -144,7 +144,7 @@
     }
     .blog-post{
         h1{
-            margin-top: -65px;
+            margin-top: -55px;
             font-size: 44px;
             font-weight: 900;
             text-align: left;
@@ -197,6 +197,16 @@
             margin-top: 50px;
             margin-bottom: 20px;
         }
+        // .sticky{
+        //     position: relative;
+        //     left: 10%;
+        //     top: 0;
+        //     margin-top: 5%;
+        //     height: auto;
+        //     @media(max-width: 767px){
+        //         left: 0;
+        //     } 
+        // }
         .sticky{
             position: relative;
             left: 10%;
@@ -205,14 +215,13 @@
             height: auto;
             @media(max-width: 767px){
                 left: 0;
-            }  
-        }
-        .sticky{
+            } 
             .blog-social{
+                position: -webkit-sticky;
                 position: sticky;
                 left: 10%;
                 top: 150px;
-                height: auto;
+                height: auto; 
                 h3{
                     font-size: 20px;
                     font-family: 'Roboto', sans-serif;
