--- a/src/assets/scss/contact.scss
+++ b/src/assets/scss/contact.scss
@@ -89,6 +89,8 @@
                     }
                 }
                 input, textarea {
+                    padding-left: 0px;
+                    padding-right: 0px;
                     background: transparent;
                 }
                 .btn-primary {
@@ -251,6 +253,7 @@
                                 justify-content: center;
                                 padding: 10px;
                                 &:hover {
+                                    text-decoration: none;
                                     color: #ffffff;
                                     background: linear-gradient(-45deg, #9fcb29 0%, #5bb53f 100%);
                                 }
