event light-box added

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -18,4 +18,5 @@ body {
 @import './contact.scss';
 @import './culture.scss';
 @import './aboutus.scss';
+@import './lightbox.scss';
 @import './../../../node_modules/@fortawesome/fontawesome-free/css/all.css';
