--- a/src/assets/scss/culture.scss
+++ b/src/assets/scss/culture.scss
@@ -25,6 +25,9 @@
         padding-right: 15px;
         padding-left: 15px;
         float: left;
+        border: none;
+        height: auto;
+        background: transparent;
     }
 }
 
