--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -650,12 +650,13 @@
                 }
 
                 p {
+                    padding-right: 12px;
                     color: #313c49;
                     font-family: 'Roboto', sans-serif;
                     font-weight: normal;
                     font-style: normal;
-                    font-size: 15px;
-                    line-height: 25px;
+                    font-size: 17px;
+                    line-height: 28px;
                     margin-bottom: 0px;
                 }
 
