--- a/src/assets/scss/blog.scss
+++ b/src/assets/scss/blog.scss
@@ -195,6 +195,9 @@
 
 .blog-list{
     .blog-sidebar-wrapper{
+        .widget-area{
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+        }
         .widget_categories, .widget_recent_entries{
             .card{
                 .widget-title{
