--- a/src/assets/scss/blog.scss
+++ b/src/assets/scss/blog.scss
@@ -25,6 +25,8 @@
         font-weight: 400;
         line-height: 1.5em;
         font-size: 2.5rem;
+        padding: 0px;
+        margin: 0px;
     }
 }
 
