contact form css changes

--- a/src/assets/scss/contact.scss
+++ b/src/assets/scss/contact.scss
@@ -81,7 +81,8 @@
                 label  {
                     margin-bottom: 15px;
                     color: #fff;
-                    font-size: 13px;
+                    font-size: 12px;
+                    font-family: 'Open Sans', sans-serif;
                     span {
                         color: red;
                         // font-size: 18px;
