--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -5,6 +5,9 @@
     padding-bottom: 25px;
     padding-left: 20px;
     padding-right: 20px;
+    .widget {
+        padding-left: 0px;
+    }
     h3 {
         font-weight: 400;
         font-style: normal;
@@ -124,8 +127,6 @@
             line-height: 20px;
             margin-bottom: 0px;
             color: #9facbd;
-            // margin-top: 20px;
-            margin-left: -20px;
             span {
                 color: #9cd827;
                 letter-spacing: 0.5px;
