--- a/src/assets/scss/page-header.scss
+++ b/src/assets/scss/page-header.scss
@@ -1,4 +1,7 @@
 .page-header{
+    img {
+        width: 300px;
+    }
     margin: 0px;
     padding: 50px 0px;
     @media screen and (max-width: 575px){
