--- a/src/assets/scss/testimonials.scss
+++ b/src/assets/scss/testimonials.scss
@@ -15,7 +15,9 @@
                 background: #ffffff;
                 border-radius: 5px 5px 0 0;
                 padding: 20px 20px;
-
+                p {
+                    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+                }
                 .coma{
                     float: left;
                     width: 100%;
