--- a/src/assets/scss/testimonials.scss
+++ b/src/assets/scss/testimonials.scss
@@ -2,7 +2,7 @@
 // testimonials
 
 
-.page-template-template-testimonials{  
+// .page-template-template-testimonials{  
     .testimonial-list{
         // margin-bottom: 50px;
         margin-top: 100px;
@@ -16,6 +16,7 @@
                 border-radius: 5px 5px 0 0;
                 padding: 20px 20px;
                 p {
+                    padding: 10px 35px;
                     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
                 }
                 .coma{
@@ -44,7 +45,7 @@
             }
         }    
     }                           
-}
+// }
 
 .testimonial-list {
     margin: 30px -15px 50px -15px;
