--- a/src/assets/scss/portfolio.scss
+++ b/src/assets/scss/portfolio.scss
@@ -213,7 +213,12 @@
             }
             .project-title {
                 h5 {
-                    font-weight: normal;
+                    // font-weight: normal;
+                    font-style: italic;
+                    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+                    font-weight: 400;
+                    line-height: 1.5em;
+                    font-size: 1.25rem;
                 }
                 padding: 25px;
                 position: relative;
