--- a/src/assets/scss/testimonials.scss
+++ b/src/assets/scss/testimonials.scss
@@ -5,9 +5,13 @@
 // .page-template-template-testimonials{  
     .testimonial-list{
         // margin-bottom: 50px;
-        margin-top: 100px;
+        margin-top: 30px;
+        .card {
+            border: 0;
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
+        }
         .testimonial-wrapper{
-            margin-bottom: 20;
+            margin-bottom: 20px;
             // padding: 20px;
             .speaks{
                 width: 100%;
@@ -16,15 +20,26 @@
                 border-radius: 5px 5px 0 0;
                 padding: 20px 20px;
                 p {
-                    padding: 10px 35px;
+                    margin-top: 0;
+                    margin-bottom: 1rem;
+                    padding: 0px 35px;
                     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+                    font-size: 17px;
+                    line-height: 30px;
+                    font-weight: 400;
+                    display: inline-block;
+                    width: 100%;
+                    color: #606569;
+                    @media(max-width: 991px){
+                        font-size: 17px;
+                        line-height: 26px;
+                        padding: 10px;
+                    }
                 }
                 .coma{
                     float: left;
                     width: 100%;
                 }
-                
-
             }
             .speaks.blue{
                 background: #0a57f4;
@@ -36,47 +51,50 @@
                 background-color: #f4f4f4;
                 h3{
                     margin: 0;
-                    font-size: 1rem;
-                    
+                    font-size: 1.4rem;
+                    font-weight: 400;
                     @media(max-width: 767px){
                         font-size: 1.3rem;
+                        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+                        line-height: 1.5em;
                     }
+                   
                 }
             }
         }    
     }                           
 // }
 
-.testimonial-list {
-    margin: 30px -15px 50px -15px;
-    .speaks {
-        padding: 20px;
-    }
-}
+// .testimonial-list {
+//     margin: 30px -15px 50px -15px;
+//     .speaks {
+//         padding: 20px;
+//     }
+// }
 
-p{
-    padding: 10px 35px;
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 400;
-    display: inline-block;
-    width: 100%;
-    color: #606569;
-    @media(max-width: 991px){
-        font-size: 16px;
-        line-height: 26px;
-        padding: 10px;
-    }
-}
-h3{
-    margin: 0;
-    font-size: 1.4em;
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    font-weight: 400;
-    line-height: 1.5em;
-    @media(max-width: 767px){
-        font-size: 1.3rem;
-    }
-}
+// p{
+//     padding: 10px 35px;
+//     font-size: 18px;
+//     line-height: 30px;
+//     font-weight: 400;
+//     display: inline-block;
+//     width: 100%;
+//     color: #606569;
+//     @media(max-width: 991px){
+//         font-size: 16px;
+//         line-height: 26px;
+//         padding: 10px;
+//     }
+// }
+// h3{
+//     margin: 0;
+//     font-size: 1.4em;
+//     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+//     font-weight: 400;
+//     line-height: 1.5em;
+//     @media(max-width: 767px){
+//         font-size: 1.3rem;
+//     }
+// }
 
 // testimonials
