--- a/src/assets/scss/page-header.scss
+++ b/src/assets/scss/page-header.scss
@@ -1,11 +1,16 @@
 .page-header{
-    img {
-        width: 300px;
-    }
     margin: 0px;
     padding: 50px 0px;
     @media screen and (max-width: 575px){
         padding: 30px 0;
+    }
+}
+.contact {
+    .page-header {
+        height: 450px; 
+        img {
+            width: 300px;
+        }
     }
 }
 .page-header {
