--- a/src/assets/scss/technology.scss
+++ b/src/assets/scss/technology.scss
@@ -8,6 +8,9 @@
         position: relative;
         padding: 50px 0px;
         .title {
+            h2 {
+                margin-bottom: 0.5rem;
+            }
             a {
                 color: #393b3c;
                 font-family: 'Open Sans', Helvetica, Arial, sans-serif;
