--- a/src/assets/scss/portfolio.scss
+++ b/src/assets/scss/portfolio.scss
@@ -220,7 +220,8 @@
                     line-height: 1.5em;
                     font-size: 1.25rem;
                 }
-                padding: 0px 25px;
+                margin-top: -25px;
+                padding: 25px;
                 position: relative;
                 span {
                     b {
