--- a/src/assets/scss/technology.scss
+++ b/src/assets/scss/technology.scss
@@ -8,9 +8,6 @@
         position: relative;
         padding: 50px 0px;
         .title {
-            h2 {
-                margin-bottom: 0.5rem;
-            }
             a {
                 color: #393b3c;
                 font-family: 'Open Sans', Helvetica, Arial, sans-serif;
@@ -20,7 +17,7 @@
                 line-height: 60px;
                 margin-top: 0px;
                 text-align: left;
-                margin-bottom: 30px;
+                // margin-bottom: 30px;
                 &:hover {
                     text-decoration: none;
                 }
