--- a/src/assets/scss/lightbox.scss
+++ b/src/assets/scss/lightbox.scss
@@ -13,8 +13,8 @@
         background: #fff;
         padding: 0;
         margin: 0;
-        border-top: 1px solid red;
-        border-left: 1px solid red;
+        // border-top: 1px solid red;
+        // border-left: 1px solid red;
     }
     img {
         height: auto;
