--- a/src/assets/scss/culture.scss
+++ b/src/assets/scss/culture.scss
@@ -57,6 +57,8 @@
             transition: visibility 0s, opacity 0.5s linear;
             visibility: hidden;
             opacity: 0;
+            font-size: 1rem;
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
             a{
                 color: #ffffff;
                 border: 1px solid #ffffff;
@@ -66,6 +68,8 @@
         }
 
         &:hover .view-more{
+            font-size: 1rem;
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
             visibility: visible;
             opacity: 1;
             a:hover {
