--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -1062,7 +1062,8 @@
         a{
             color: #525252;
             &:hover{
-                color: #0e7aff;
+                color: #525252;
+                text-decoration: none;
             }
         }
          @media(min-width: 768px) and (max-width:991px){
