--- a/src/assets/scss/culture.scss
+++ b/src/assets/scss/culture.scss
@@ -81,6 +81,7 @@
         h3{
             margin: 0;
             font-size: 1.4625em;
+            font-weight: normal;
             @media only screen and (max-width: 575px) {
                 font-size: 1.2rem;
                 text-align: center;
