--- a/src/assets/scss/contact.scss
+++ b/src/assets/scss/contact.scss
@@ -1,3 +1,74 @@
+.contact {
+    .page-header{
+        margin: 0px;
+        padding: 50px 0px;
+        @media screen and (max-width: 575px){
+            padding: 30px 0;
+        }
+    }
+    .page-header {
+        background-image: url('./../images/common-banner-contact.png');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        @media(max-width: 767px){
+            background: linear-gradient(-14deg, #009fff 21%, #0974d5 30%, #053ab1 46%, #06284e 92%);
+        }
+        Img { 
+            display: block;
+            margin: 0 auto;
+            height: 320px;
+            @media only screen and (max-width: 576px) {
+                height: 250px;
+            }
+        }
+        h5 {
+            font-size: 25px;
+            font-weight: 600;
+            color: #ffffff;
+            line-height: 30px;
+            margin-top: 50px;
+            margin-bottom: 10px;
+            font-family: 'Montserrat', sans-serif;
+            @media screen and (max-width: 575px){
+                margin-top: 20px;
+            }
+        }
+        .title {
+            font-family: 'Open Sans', sans-serif;
+            color: #ffffff;
+            font-weight: 700;
+            font-style: normal;
+            font-size: 42px;
+            line-height: 60px;
+            position: relative;
+            margin-bottom: 20px;
+            margin-top: 0px;
+            padding-bottom: 10px;
+            &:after {
+                width: 73px;
+                background: #33a2de;
+                height: 5px;
+                content: "";
+                position: absolute;
+                left: 4px;
+                bottom: 0;
+            }
+            @media(max-width: 767px){
+                font-size: 38px;
+            }
+        }
+        .sub-title {
+            font-family: 'Roboto', sans-serif;
+            color: #ffffff;
+            font-weight: normal;
+            font-style: normal;
+            font-size: 17px;
+            line-height: 25px;
+            margin-top: 8px;
+        }
+    }
+}
+
 .contact-form {
     .card {
         box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
