changes in header_moscots

--- a/src/assets/scss/technology.scss
+++ b/src/assets/scss/technology.scss
@@ -1,9 +1,9 @@
 .technology-page {
-    .tech-img {
-        img {
-            max-width: 80%;
-        }
-    }
+    // .tech-img {
+    //     img {
+    //         max-width: 80%;
+    //     }
+    // }
     .technology-odd {
         position: relative;
         padding: 50px 0px;
