--- a/src/assets/scss/page-header.scss
+++ b/src/assets/scss/page-header.scss
@@ -20,10 +20,13 @@
     @media(max-width: 767px){
         background: linear-gradient(-14deg, #009fff 21%, #0974d5 30%, #053ab1 46%, #06284e 92%);
     }
-    .head_img {
-        width: 315px;
-        height: 320px;
+    .vector {
+        text-align: center;
     }
+    // .head_img {
+    //     width: 315px;
+    //     height: 320px;
+    // }
     img { 
         display: block;
         margin: 0 auto;
