--- a/src/assets/scss/portfolio.scss
+++ b/src/assets/scss/portfolio.scss
@@ -218,10 +218,11 @@
                     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
                     font-weight: 400;
                     line-height: 1.5em;
-                    font-size: 1.25rem;
                 }
-                margin-top: -25px;
+                // margin-top: -25px;
                 padding: 25px;
+                font-size: 1rem;
+                // padding-bottom: 10px;
                 position: relative;
                 span {
                     b {
