--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -1036,6 +1036,8 @@
             margin-bottom: 30px;
             // height: 122px;
             // padding: 1rem;
+            // padding-left: 5px;
+            // padding-right: 5px;
             display: inline-flex;
             align-items: center;
             text-align: center;
