portfolio name changes

--- a/src/assets/scss/portfolio.scss
+++ b/src/assets/scss/portfolio.scss
@@ -218,6 +218,7 @@
                     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
                     font-weight: 400;
                     line-height: 1.5em;
+                    font-size: 1.10rem;
                 }
                 // margin-top: -25px;
                 padding: 25px;
