--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -1,88 +1,13 @@
-.page-header{
-    margin: 0px;
-    padding: 50px 0px;
-    @media screen and (max-width: 575px){
-        padding: 30px 0;
-    }
-}
-.page-header {
-    background-image: url('./../images/blog-banner.png');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    @media(max-width: 767px){
-        background: linear-gradient(-14deg, #009fff 21%, #0974d5 30%, #053ab1 46%, #06284e 92%);
-    }
-    img { 
-        display: block;
-        margin: 0 auto;
-        height: 320px;
-        @media only screen and (max-width: 576px) {
-            height: 250px;
-        }
-    }
-    h5 {
-        font-size: 25px;
-        font-weight: 600;
-        color: #ffffff;
-        line-height: 30px;
-        margin-top: 50px;
-        margin-bottom: 10px;
-        font-family: 'Montserrat', sans-serif;
-        @media screen and (max-width: 575px){
-            margin-top: 20px;
-        }
-    }
-    .title {
-        font-family: 'Open Sans', sans-serif;
-        color: #ffffff;
-        font-weight: 700;
-        font-style: normal;
-        font-size: 50px;
-        line-height: 60px;
-        position: relative;
-        margin-bottom: 20px;
-        margin-top: 0px;
-        padding-bottom: 10px;
-        &:after {
-            width: 73px;
-            background: #33a2de;
-            height: 5px;
-            content: "";
-            position: absolute;
-            left: 4px;
-            bottom: 0;
-        }
-        @media(max-width: 767px){
-            font-size: 38px;
-        }
-    }
-    .sub-title {
-        font-family: 'Roboto', sans-serif;
-        color: #ffffff;
-        font-weight: normal;
-        font-style: normal;
-        font-size: 17px;
-        line-height: 25px;
-        margin-top: 8px;
-    }
-}
-
-
-
-
-// banner
-
-
-
-
 .page-home-header {
     margin: 0px;
-    background: url("./../images/home-banner.svg"),url("./../images/banner-bottom\ \(1\).svg"), linear-gradient(-14deg, rgb(0, 159, 255) 21%, rgb(9, 116, 213) 30%, rgb(5, 58, 177) 46%, rgb(6, 40, 78) 92%);
+    background: url("./../images/homepage-wordcmap-bg.png");
+    // background: url("./../images/home-banner.svg"),url("./../images/banner-bottom\ \(1\).svg"), linear-gradient(-14deg, rgb(0, 159, 255) 21%, rgb(9, 116, 213) 30%, rgb(5, 58, 177) 46%, rgb(6, 40, 78) 92%);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     position: relative;
     padding: 50px 0px;
+    margin-top: -30px;
     @media only screen and (max-width: 576px) {
         background: linear-gradient(-14deg, rgb(0, 159, 255) 21%, rgb(9, 116, 213) 30%, rgb(5, 58, 177) 46%, rgb(6, 40, 78) 92%);
     }
@@ -91,8 +16,8 @@
         display: block;
         height: 300px;
         margin: 50px auto;
-        -webkit-animation: mover 2s infinite alternate;
-        animation: mover 2s infinite alternate;
+        // -webkit-animation: mover 2s infinite alternate;
+        // animation: mover 2s infinite alternate;
         @media only screen and (max-width: 768px) {
             display: block;
             margin: 20px auto;
@@ -134,11 +59,14 @@
             color: #ffffff;
             font-weight: 700;
             font-style: normal;
-            font-size: 50px;
+            font-size: 42px;
             line-height: 60px;
             position: relative;
             margin-bottom: 10px;
             margin-top: 0px;
+            span {
+                font-weight: 100;
+            }
 
          @media(max-width: 767px){
             font-size: 34px;
@@ -153,12 +81,26 @@
             font-style: normal;
             font-size: 17px;
             line-height: 25px;
-            margin-top: 0px;
+            margin-top: 50px;
             margin-bottom: 0px;
             letter-spacing: 0.5px;
 
             @media only screen and (max-width: 576px) {
                 font-size: 18px;
+            }
+            .btn-link {
+                border: 2px solid #fff;
+                padding: 14px 30px;
+                color: white;
+                font-weight: 600;
+                text-decoration: none;
+                font-size: 20px;
+                line-height: 25px;
+                border-radius: 4px;
+                &:hover {
+                    color: #fff;
+                    text-decoration: none;
+                }
             }
         }
     }
@@ -183,18 +125,18 @@
         }
     }
 
-    &:before {
-        content: '';
-        position: absolute;
-        background: url("./../images/bubble.svg");
-        width: 100%;
-        height: 100%;
-        opacity: 0.12;
-        top: 0;
-        @media only screen and (max-width: 576px) {
-            display: none;
-        }
-    }
+    // &:before {
+    //     content: '';
+    //     position: absolute;
+    //     background: url("./../images/bubble.svg");
+    //     width: 100%;
+    //     height: 100%;
+    //     opacity: 0.12;
+    //     top: 0;
+    //     @media only screen and (max-width: 576px) {
+    //         display: none;
+    //     }
+    // }
 }
 
 /*Page Header*/
@@ -991,7 +933,7 @@
 /* Our Testimonials */
 
 .hero-bkg-animated {
-    background: url("./../images/fish.png") repeat 0 0;
+    // background: url("./../images/fish.png") repeat 0 0;
     width: 100%;
     margin: 0;
     padding: 0px;
