--- a/src/assets/scss/page-header.scss
+++ b/src/assets/scss/page-header.scss
@@ -14,7 +14,9 @@
 //     }
 // }
 .page-header {
-    background-image: url('./../images/blog-banner.png');
+    // background-image: url('./../images/blog-banner.png');
+    // background: url("./../images/homepage-wordcmap-bg.png");
+    background-image: url('./../images/common-banner-contact.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     @media(max-width: 767px){
