home page banner changes

--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -15,7 +15,8 @@
     .home-avatar {
         display: block;
         height: 300px;
-        margin: 50px auto;
+        margin: 50px 40px;
+        // text-align: right;
         // -webkit-animation: mover 2s infinite alternate;
         // animation: mover 2s infinite alternate;
         @media only screen and (max-width: 768px) {
